# librepods

./: .editorconfig  .gitignore  AAP Definitions.md  CHANGELOG.md  CONTRIBUTING.md  Proximity Pairing Message.md  README.md  build-magisk-module.sh  eg.txt  flake.nix  post-login-setup.sh  update-librepods.sh
.github/ISSUE_TEMPLATE/: 01-bug-report-android.yml  02-bug-report-linux.yml
.github/workflows/: ci-android.yml  ci-linux-rust.yml  ci-linux.yml  ci-nix-flake-update.yml  update-flake-lock.yml
android/: README.md  build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  bluetooth_socket.cpp  l2c_fcr_hook.cpp
android/gradle/: libs.versions.toml
docs/: device-info.md  google-assistant-shortcuts.md
extras/: update_nonpatch.json
head-tracking/: colors.py  gestures.py
linux/: CMakeLists.txt  Main.qml  README.md  SegmentedControl.qml  airpods_packets.h  battery.hpp  cli.cpp  cli.h  dbusadaptor.hpp  deviceinfo.hpp  enums.h  hearing-aid-adjustments.py  librepods-ctl.cpp  main.cpp  trayiconmanager.cpp  trayiconmanager.h
linux-rust/: .gitignore  Cargo.toml  Justfile
linux-rust/assets/: me.kavishdevar.librepods.desktop
linux-rust/flatpak/: me.kavishdevar.librepods.metainfo.xml  me.kavishdevar.librepods.yaml
linux-rust/src/: headless.rs  main.rs  media_controller.rs  utils.rs
linux-rust/src/audio/: agc.rs  eld.rs  hires_mic.rs  mod.rs  output.rs
linux-rust/src/bluetooth/: aacp.rs  aacp_audio.rs  att.rs  discovery.rs  le.rs  managers.rs  mod.rs
linux-rust/src/devices/: airpods.rs  enums.rs  gestures.rs  mod.rs  nothing.rs
linux-rust/src/ui/: airpods.rs  messages.rs  mod.rs  nothing.rs  popup.rs  tray.rs  window.rs
linux/assets/: me.kavishdevar.librepods.desktop
linux/ble/: blemanager.cpp  bleutils.cpp
linux/media/: mediacontroller.cpp  (+3 more)
root-module-manual/: module.prop
scripts/: hearing-aid.py
(+195 files in other folders)
